deprecations removed for Java 11